# smeecher

./: .env.example  .gitignore  Dockerfile  Makefile  Procfile  README.md  build.sh  client.py  database.py  main.py  models.py  nixpacks.toml  pyproject.toml  query.py  railpack.json  railpack.json.bak  server.py  start.sh  upload.sh
playground/: cluster_comps.py
server/: pyproject.toml
server/src/db/: database.py
server/src/graph/: __init__.py  causal.py  clustering.py  engine.py  features.py  items.py  server.py
server/src/scraper/: __init__.py  client.py  models.py  scraper.py
src/db/: database.py
src/graph/: __init__.py  engine.py  index.py  server.py
src/scraper/: client.py  scraper.py
static/: index.html
static/assets/: index-B6wGeKjP.js  index-BGFkxHZu.js  index-BlxOpXCo.js  index-CMzATBqP.css  index-CNNpCI7c.js  index-D1nhIzCI.css  index-DM3T_999.js  index-DnWtnMJ7.js  index-H0SwmvcD.css  index-SghoTvMx.css  index-p77_5IBL.css
static/css/: styles.css
static/js/: app.js
web/: index.html  package-lock.json  package.json  vite.config.js
web/scripts/: waitForApi.mjs
web/src/: App.svelte  app.css  main.js
web/src/lib/: api.js  changelog.json
web/src/lib/client/: posthog.js
web/src/lib/components/: AvgPlacement.svelte  ChangelogPage.svelte  Chips.svelte  ClusterExplorer.svelte  ControlPanel.svelte  FilterToggles.svelte  Graph.svelte  Header.svelte  ItemExplorer.svelte  ItemFilterMenu.svelte  Legend.svelte  SearchBar.svelte  SortModeSelector.svelte  Stats.svelte  Tooltip.svelte  TopKInput.svelte  VoiceInput.svelte  Walkthrough.svelte
(+19 files in other folders)
