[project]
name = "smeecher"
version = "0.1.0"
description = "TFT match scraper and analysis tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.126.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "uvicorn>=0.38.0",
]

[project.scripts]
smeecher = "src.scraper.scraper:main"
smeecher-graph = "src.graph.server:main"
smeecher-index = "src.graph.index:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []
