[project]
name = "smeecher"
version = "0.1.0"
description = "TFT match scraper and analysis tool"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.126.0",
    "httpx>=0.28.1",
    "numpy>=2.0.0",
    "orjson>=3.11.5",
    "pydantic>=2.12.5",
    "pyroaring>=1.0.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.9",
    "rich>=14.2.0",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.38.0",
    "websockets>=14.0",
]

[project.scripts]
smeecher = "src.scraper.scraper:main"
smeecher-graph = "src.graph.server:main"
smeecher-build = "src.graph.engine:build_engine"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []
